<feat> 매수 매도 시그널 수정

--- a/Display/src/main/resources/templates/display.html
+++ b/Display/src/main/resources/templates/display.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BTC/USD Analytics</title>
+    <title>Whale Hunter</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.css">
     <script th:src="@{https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.bundle.js}"></script>
 </head>
